# kde-lockscreen

./: .gitignore  LICENSE  Makefile  README.md
daemon/: pyproject.toml
daemon/kde_lockscreen/: fetcher.py  fprintd_watcher.py  inhibitd.py  manifest.py
daemon/kde_lockscreen/sources/: bing.py  nasa.py  picsum.py  wikimedia.py
daemon/tests/: test_bing.py  test_manifest.py  test_nasa.py  test_picsum.py  test_wikimedia.py
docs/superpowers/plans/: 2026-04-17-kde-lockscreen.md
docs/superpowers/specs/: 2026-04-17-kde-lockscreen-design.md
package/: metadata.desktop
package/contents/lockscreen/: BackgroundLayer.qml  CenterStack.qml  Clock.qml  ImageRegistry.qml  LockScreen.qml  LockScreenUi.qml  NextImageHint.qml  PinDots.qml  PinInput.qml  SaveImageHint.qml  config.qml  config.xml
pam/: kscreenlocker.optimized
scripts/: emergency-revert.sh  install-dev.sh  install-pam.sh  install.sh  pam-diagnose.sh  screen-off.sh  test-greeter.sh  uninstall.sh
systemd/: kde-lockscreen-fetcher.service  kde-lockscreen-fetcher.timer  kde-lockscreen-fprintd-watcher.service  kde-lockscreen-inhibitd.service  kde-lockscreen-refill.path  kde-lockscreen-refill.service  kde-lockscreen-refill.timer
