[project]
name = "kde-lockscreen-daemon"
version = "0.1.0"
description = "KDE lockscreen image fetcher + sleep-inhibit daemons"
requires-python = ">=3.11"
dependencies = [
    "dbus-next>=0.2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kde_lockscreen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
